# vSMTP

./: .gitignore  Cargo.toml  README.md  alpine.Dockerfile  debian.Dockerfile  new.Dockerfile  server.py
.github/workflows/: plugins.yml
benchmarks/: README.md  install.sh  run.sh  uninstall.sh
benchmarks/dkim-dmarc/: README.md  install.sh  run.sh
benchmarks/dkim-dmarc/postfix/: main.cf
benchmarks/dkim-dmarc/vsmtp/: filter.vsl
benchmarks/dkim-dmarc/vsmtp/conf.d/: config.vsl
benchmarks/hold/: README.md  install.sh  run.sh
benchmarks/hold/vsmtp/: vsmtp.vsl
benchmarks/hold/vsmtp/conf.d/: config.vsl
examples/anti_relaying/: vsmtp.vsl
examples/antivirus/: vsmtp.vsl
examples/family/conf.d/: config.vsl
examples/greylist/: vsmtp.vsl
mail/: test.js
mount/: filter.vsl  vsmtp.vsl
mount/certs/: fullchain.pem  privkey.pem
mount/conf.d/: config.vsl
mount/domain-available/example.com/: blacklist.txt  outgoing.vsl
mount/objects/: test.vsl
mount/plugins/: cmd.vsl
src/plugins/vsmtp-plugin-csv/: Cargo.toml
src/plugins/vsmtp-plugin-dnsbl/: Cargo.toml
src/plugins/vsmtp-plugin-dnsbl/src/: api.rs  lib.rs  tests.rs
src/plugins/vsmtp-plugin-ldap/: Cargo.toml
src/plugins/vsmtp-plugin-memcached/: Cargo.toml
src/plugins/vsmtp-plugin-mysql/: Cargo.toml
src/plugins/vsmtp-plugin-sqlite/: Cargo.toml  README.md  local_test.sh
src/plugins/vsmtp-plugin-sqlite/docker/: Dockerfile  docker-compose.yml
src/plugins/vsmtp-plugin-sqlite/docker/sqlite-config/: greylist-dump.sql
src/plugins/vsmtp-plugin-sqlite/docker/vsmtp-config/: filter.vsl
src/plugins/vsmtp-plugin-sqlite/docker/vsmtp-config/services/: db.vsl
src/plugins/vsmtp-plugin-sqlite/src/: api.rs  lib.rs  tests.rs
src/vqueue/: Cargo.toml
src/vqueue/src/: lib.rs
src/vqueue/src/cli/: args.rs  execute.rs
src/vqueue/src/cli/debugger/: ui.rs
src/vsmtp/vsmtp-auth/: Cargo.toml
src/vsmtp/vsmtp-common/: Cargo.toml
src/vsmtp/vsmtp-config/: Cargo.toml
src/vsmtp/vsmtp-core/: Cargo.toml
src/vsmtp/vsmtp-delivery/: Cargo.toml
src/vsmtp/vsmtp-mail-parser/: Cargo.toml
src/vsmtp/vsmtp-mail-parser/src/implementation/: basic_parser.rs
src/vsmtp/vsmtp-mail-parser/src/message/: message_body.rs  raw_body.rs
src/vsmtp/vsmtp-plugin-vsl/: Cargo.toml
src/vsmtp/vsmtp-protocol/: Cargo.toml
src/vsmtp/vsmtp-protocol/src/: command.rs  reader.rs  receiver.rs  receiver_handler.rs  writer.rs
src/vsmtp/vsmtp-rule-engine/: Cargo.toml
src/vsmtp/vsmtp-rule-engine/benches/: compile_re.rs
src/vsmtp/vsmtp-rule-engine/src/: sub_domain_hierarchy.rs
src/vsmtp/vsmtp-rule-engine/src/api/: message.rs
src/vsmtp/vsmtp-rule-engine/src/domain_hierarchy/: tree.rs
src/vsmtp/vsmtp-server/: Cargo.toml
src/vsmtp/vsmtp-server/src/: server.rs
src/vsmtp/vsmtp-server/src/delivery/: deferred.rs  deliver.rs
src/vsmtp/vsmtp-test/: Cargo.toml
(+2 files in other folders)
