[package]
name = "vsmtp-plugin-dnsbl"
version = "2.2.1"
license = "GPL-3.0-only"
edition = "2021"
authors = ["Team viridIT <https://viridit.com/>"]

description = "A plugin for vSMTP that enable support for redis databases"

homepage = "https://github.com/viridIT/vsmtp-plugin-redis"
repository = "https://github.com/viridIT/vsmtp-plugin-redis"
documentation = "https://docs.rs/crate/vsmtp-plugin-redis/"

readme = "README.md"
keywords = ["vsmtp", "dns"]
categories = ["email", "dns", "plugin"]

rust-version = "1.66.1"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rhai = { version = "1.12.0", default-features = false, features = [
    "unchecked",
    "sync",
    "internals",
    "no_closure",
    "metadata",
] }
serde = { version = "1.0.160", default-features = false, features = ["std", "derive"] }
humantime-serde = { version = "1.1.1", default-features = false }
