[package]
name = "vsmtp_plugin_sqlite"
version = "0.1.0"
edition = "2021"
authors = ["ibaylon"]

[lib]
# You could also use Rust's unstable ABI with "dylib".
crate-type = ["cdylib"]

[dependencies]
vsmtp-rule-engine = { path = "../../vSMTP/src/vsmtp/vsmtp-rule-engine" }
rhai = { version = "1.12" }
r2d2 = { version = "0.8.10", default-features = false }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.152", default-features = false, features = ["std", "derive"] }
humantime-serde = { version = "1.1.1", default-features = false }
smartstring = { version = "*", features = ["proptest", "serde"] }
